--- a/.gitignore
+++ b/.gitignore
@@ -48,14 +48,14 @@ artifacts/
 *_p.c
 *_i.h
 *.ilk
-.meta
-.obj
-.pch
-.pdb
-.sdf
-.ipch
-.vcxproj
-.vcxproj.filters
+*.meta
+*.obj
+*.pch
+*.pdb
+*.sdf
+*.ipch
+*.vcxproj
+*.vcxproj.filters
 *.pgc
 *.pgd
 *.rsp
