--- a/PotatoGame/PotatoGame.vcxproj
+++ b/PotatoGame/PotatoGame.vcxproj
@@ -89,6 +89,7 @@
     <ClInclude Include="PGBaseEvent.h" />
     <ClInclude Include="PGFont.h" />
     <ClInclude Include="PGEditorInstance.h" />
+    <ClInclude Include="PGMapGrid.h" />
     <ClInclude Include="PGMousePicker.h" />
     <ClInclude Include="PGEntity.h" />
     <ClInclude Include="PGBaseScene.h" />
@@ -106,6 +107,7 @@
     <ClInclude Include="PGTexture.h" />
     <ClInclude Include="PGUIBaseElement.h" />
     <ClInclude Include="PGUICanvas.h" />
+    <ClInclude Include="PGUICore.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
