More file and class refactoring

--- a/PotatoGame/PotatoGame.vcxproj
+++ b/PotatoGame/PotatoGame.vcxproj
@@ -80,34 +80,35 @@
     <Text Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="PG3DPrimitive.h" />
+    <ClInclude Include="Shader.h" />
+    <ClInclude Include="Primitive.h" />
     <ClInclude Include="AssetManager.h" />
     <ClInclude Include="PGBackgroundMapGridMesh.h" />
     <ClInclude Include="Camera.h" />
-    <ClInclude Include="PGBaseObject.h" />
-    <ClInclude Include="PGBaseObjectList.h" />
-    <ClInclude Include="PGBuildableObject.h" />
-    <ClInclude Include="PGFont.h" />
+    <ClInclude Include="BaseObject.h" />
+    <ClInclude Include="ObjectList.h" />
+    <ClInclude Include="BuildableObject.h" />
+    <ClInclude Include="Font.h" />
     <ClInclude Include="PGEditorInstance.h" />
-    <ClInclude Include="PGGameModel.h" />
+    <ClInclude Include="GameModel.h" />
     <ClInclude Include="PGMapAtlas.h" />
     <ClInclude Include="PGMapGrid.h" />
-    <ClInclude Include="PGMousePicker.h" />
-    <ClInclude Include="PGEntity.h" />
-    <ClInclude Include="PGBaseScene.h" />
-    <ClInclude Include="PGGameWindow.h" />
-    <ClInclude Include="PGBaseRenderer.h" />
-    <ClInclude Include="PGCore.h" />
+    <ClInclude Include="MousePicker.h" />
+    <ClInclude Include="Entity.h" />
+    <ClInclude Include="Scene.h" />
+    <ClInclude Include="GameWindow.h" />
+    <ClInclude Include="BaseRenderer.h" />
+    <ClInclude Include="Core.h" />
     <ClInclude Include="EngineInstance.h" />
-    <ClInclude Include="PGList.h" />
-    <ClInclude Include="PGMesh.h" />
+    <ClInclude Include="List.h" />
+    <ClInclude Include="Mesh.h" />
     <ClInclude Include="PGMeshInstance.h" />
     <ClInclude Include="PGEditorScene.h" />
     <ClInclude Include="PGShaderSources.h" />
-    <ClInclude Include="PGString.h" />
-    <ClInclude Include="PGControler.h" />
-    <ClInclude Include="PGTexture.h" />
-    <ClInclude Include="PGTree.h" />
+    <ClInclude Include="String.h" />
+    <ClInclude Include="Controler.h" />
+    <ClInclude Include="Texture.h" />
+    <ClInclude Include="Tree.h" />
     <ClInclude Include="PGUIBaseElement.h" />
     <ClInclude Include="PGUICanvas.h" />
     <ClInclude Include="PGUICore.h" />
