Major refactor of the file 	added more thing in the editor

--- a/PotatoGame/PotatoGame.vcxproj
+++ b/PotatoGame/PotatoGame.vcxproj
@@ -82,14 +82,15 @@
   <ItemGroup>
     <ClInclude Include="PG3DPrimitive.h" />
     <ClInclude Include="PGAssetManager.h" />
+    <ClInclude Include="PGBackgroundMapGridMesh.h" />
     <ClInclude Include="PGBaseCamera.h" />
     <ClInclude Include="PGBaseObject.h" />
     <ClInclude Include="PGBaseObjectList.h" />
     <ClInclude Include="PGBuildableObject.h" />
-    <ClInclude Include="PGBaseEvent.h" />
     <ClInclude Include="PGFont.h" />
     <ClInclude Include="PGEditorInstance.h" />
     <ClInclude Include="PGGameModel.h" />
+    <ClInclude Include="PGMapAtlas.h" />
     <ClInclude Include="PGMapGrid.h" />
     <ClInclude Include="PGMousePicker.h" />
     <ClInclude Include="PGEntity.h" />
@@ -97,7 +98,7 @@
     <ClInclude Include="PGGameWindow.h" />
     <ClInclude Include="PGBaseRenderer.h" />
     <ClInclude Include="PGCore.h" />
-    <ClInclude Include="PGBaseGame.h" />
+    <ClInclude Include="PGEngineInstance.h" />
     <ClInclude Include="PGList.h" />
     <ClInclude Include="PGMesh.h" />
     <ClInclude Include="PGMeshInstance.h" />
