--- a/PotatoGame/PotatoGame.vcxproj
+++ b/PotatoGame/PotatoGame.vcxproj
@@ -81,10 +81,12 @@
     <Text Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="AxisMesh.h" />
     <ClInclude Include="Buffer.h" />
     <ClInclude Include="Button.h" />
     <ClInclude Include="ImageBox.h" />
     <ClInclude Include="Panel.h" />
+    <ClInclude Include="TextMesh.h" />
     <ClInclude Include="WindowMenu.h" />
     <ClInclude Include="Label.h" />
     <ClInclude Include="Shader.h" />
