--- a/PotatoGame/PotatoGame.vcxproj.filters
+++ b/PotatoGame/PotatoGame.vcxproj.filters
@@ -52,6 +52,9 @@
     <Filter Include="Header Files\PG\Engine\Renderer\Mesh">
       <UniqueIdentifier>{27de8a22-29f5-4c40-810b-1e90ec8bf9e2}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Header Files\GameEditor\Scene">
+      <UniqueIdentifier>{b1d5f6c7-4812-4961-aca3-1c3762933421}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <Text Include="ReadMe.txt" />
@@ -63,16 +66,10 @@
     <ClInclude Include="targetver.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="PGUICanvas.h">
-      <Filter>Header Files\PG\Gui</Filter>
-    </ClInclude>
     <ClInclude Include="stdafx.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="PGEditorInstance.h">
-      <Filter>Header Files\GameEditor</Filter>
-    </ClInclude>
-    <ClInclude Include="PGEditorScene.h">
       <Filter>Header Files\GameEditor</Filter>
     </ClInclude>
     <ClInclude Include="PGMapGrid.h">
@@ -194,6 +191,15 @@
     </ClInclude>
     <ClInclude Include="Quaternion.h">
       <Filter>Header Files\PG\Core</Filter>
+    </ClInclude>
+    <ClInclude Include="GUICanvas.h">
+      <Filter>Header Files\PG\Gui</Filter>
+    </ClInclude>
+    <ClInclude Include="PGMapEditor.h">
+      <Filter>Header Files\GameEditor\Scene</Filter>
+    </ClInclude>
+    <ClInclude Include="TextBox.h">
+      <Filter>Header Files\PG\Gui\Element</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
